First commit from the git flow development branch

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Test page</title>
   </head>
   <body>
-<p>Adding this new line for issue-01</p>
+<p>First commit from the git flow development branch</p>
   </body>
 </html>
