Adding a new line to highlight that we are working from feature branch fissue-01

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
 <p>First commit from the git flow development branch</p>
+<p>This new line is added from the feature branch fissue-01</p>
   </body>
 </html>
