Adding a new line to the index.html file from the new feature branch

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
 <p>First commit from the git flow development branch</p>
 <p>This new line is added from the feature branch fissue-01</p>
+<p>Third line added from the second feature branch fissue-002</p>
   </body>
 </html>
